--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,9 +7,15 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="lightWhite">#D9DFFF</color>
     <color name="grey">#DCDCDC</color>
     <color name="darkGrey">#808080</color>
     <color name="green">#32CD32</color>
     <color name="yellow">#FFFF00</color>
     <color name="red">#FF0000</color>
+    <color name="mainBlue">#3746E6</color>
+    <color name="mainLightBlue">#717BE6</color>
+    <color name="transparent_50">#50000000</color>
+    <color name="transparent_25">#40000000</color>
+    <color name="transparent_75">#BF000000</color>
 </resources>
