--- a/app/src/main/res/layout/fixtures_item.xml
+++ b/app/src/main/res/layout/fixtures_item.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="3dp">
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+    android:layout_margin="3dp"
+    android:background="@color/transparent_25">
 
     <ImageView
         android:id="@+id/fixturesImage"
@@ -29,7 +27,7 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="5dp"
         android:text="@string/enemy_name"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/fixturesImage"
         app:layout_constraintTop_toTopOf="parent" />
@@ -41,7 +39,7 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="5dp"
         android:text="@string/type_of_match"
-        android:textColor="@color/darkGrey"
+        android:textColor="@color/lightWhite"
         android:textStyle="italic"
         app:layout_constraintStart_toEndOf="@+id/fixturesImage"
         app:layout_constraintTop_toBottomOf="@+id/fixturesEnemy" />
@@ -53,9 +51,8 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="5dp"
         android:text="@string/date_of_match"
-        android:textColor="@color/darkGrey"
+        android:textColor="@color/lightWhite"
         android:textStyle="italic"
         app:layout_constraintStart_toEndOf="@+id/fixturesImage"
         app:layout_constraintTop_toBottomOf="@+id/fixturesType" />
     </androidx.constraintlayout.widget.ConstraintLayout>
-</androidx.cardview.widget.CardView>
