--- a/app/src/main/res/layout/fragment_player.xml
+++ b/app/src/main/res/layout/fragment_player.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="3dp"
-    android:background="@color/grey"
     android:padding="3dp"
     tools:context=".presentation.fragments.PlayerFragment">
 
@@ -13,7 +12,7 @@
         android:id="@+id/rvPlayer"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="@color/darkGrey"
+        android:background="@color/transparent_50"
         tools:listitem="@layout/player_item"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
