--- a/app/src/main/res/layout/player_item.xml
+++ b/app/src/main/res/layout/player_item.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="3dp"
-    android:background="@color/white">
+    android:background="@color/transparent_25">
 
     <ImageView
         android:id="@+id/playerImage"
@@ -22,7 +23,7 @@
         android:layout_marginStart="5dp"
         android:layout_marginTop="3dp"
         android:text="TextView"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/playerImage"
@@ -35,7 +36,7 @@
         android:layout_marginStart="5dp"
         android:layout_marginBottom="3dp"
         android:text="TextView"
-        android:textColor="@color/darkGrey"
+        android:textColor="@color/lightWhite"
         android:textSize="14sp"
         android:textStyle="italic"
         app:layout_constraintBottom_toBottomOf="@+id/playerImage"
