--- a/app/src/main/res/layout/results_item.xml
+++ b/app/src/main/res/layout/results_item.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="3dp">
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+    android:layout_margin="3dp"
+    android:background="@color/transparent_25">
 
         <ImageView
             android:id="@+id/resultImage"
@@ -27,7 +25,7 @@
             android:layout_marginStart="10dp"
             android:layout_marginTop="5dp"
             android:text="@string/enemy_name"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textStyle="bold"
             app:layout_constraintStart_toEndOf="@+id/resultImage"
             app:layout_constraintTop_toTopOf="parent" />
@@ -40,7 +38,7 @@
             android:layout_marginTop="5dp"
             android:layout_marginEnd="10dp"
             android:text="@string/type_of_match"
-            android:textColor="@color/darkGrey"
+            android:textColor="@color/lightWhite"
             android:textStyle="italic"
             app:layout_constraintEnd_toStartOf="@+id/resultResult"
             app:layout_constraintStart_toEndOf="@+id/resultImage"
@@ -53,7 +51,7 @@
             android:layout_marginStart="10dp"
             android:layout_marginTop="5dp"
             android:text="@string/date_of_match"
-            android:textColor="@color/darkGrey"
+            android:textColor="@color/lightWhite"
             android:textStyle="italic"
             app:layout_constraintStart_toEndOf="@+id/resultImage"
             app:layout_constraintTop_toBottomOf="@+id/resultType" />
@@ -64,10 +62,9 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="30dp"
             android:text="0 - 0"
-            android:textColor="@color/black"
+            android:textColor="@color/lightWhite"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
-</androidx.cardview.widget.CardView>
