--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,19 +7,9 @@
 
     <fragment
         android:id="@+id/nav_home"
-        android:name="com.example.tinkoffleague.presentation.activities.ui.home.HomeFragment"
+        android:name="com.example.tinkoffleague.presentation.fragments.ViewPagerItemFragment"
         android:label="@string/menu_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_view_pager_item" />
 
-    <fragment
-        android:id="@+id/nav_gallery"
-        android:name="com.example.tinkoffleague.presentation.activities.ui.gallery.GalleryFragment"
-        android:label="@string/menu_gallery"
-        tools:layout="@layout/fragment_gallery" />
 
-    <fragment
-        android:id="@+id/nav_slideshow"
-        android:name="com.example.tinkoffleague.presentation.activities.ui.slideshow.SlideshowFragment"
-        android:label="@string/menu_slideshow"
-        tools:layout="@layout/fragment_slideshow" />
 </navigation>
