--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -8,8 +8,14 @@
     <fragment
         android:id="@+id/nav_home"
         android:name="com.example.tinkoffleague.presentation.fragments.ViewPagerItemFragment"
-        android:label="@string/menu_home"
+        android:label="@string/tinkoff"
         tools:layout="@layout/fragment_view_pager_item" />
+
+    <fragment
+        android:id="@+id/nav_info"
+        android:name="com.example.tinkoffleague.presentation.fragments.AboutAppFragment"
+        android:label="@string/tinkoff"
+        tools:layout="@layout/fragment_about_app" />
 
 
 </navigation>
